From fb3cfea (closure):
======================

In prisim/closure.py,

(*) Add member function smooth_in_tbins() under class ClosurePhase.
Update class docstring accordingly

From b13de6f (closure):
======================

In prisim/closure.py,

(*) Fix bugs in function npz2hdf5()
(*) Update docstring of function npz2hdf5() and member function
__init__() of class ClosurePhase
(*) Fix bugs in member functions __init__() and expicp() of class
ClosurePhase

From e614307 (closure):
======================

In prisim/closure.py,

(*) Modify member function __init__() to call member function expicp()
both of class ClosurePhase. Modify structure of dictionary attribute
cpinfo to hold 'raw' and 'processed' data containers, and the latter
contains 'native' and 'prelim' containers, each of which contains
'eicp' and 'wts' keys
(*) Modify member function expicp() of class ClosurePhase to compute
the complex exponential and weights as masked arrays under keys
'native/eicp' and 'native/wts' respectively

From d525933 (closure):
======================

In prisim/closure.py,

(*) Add member function expicp() along with docstring to class
ClosurePhase. Update class docstring accordingly

From bdb5e6b (closure), 94f15d0 (master):
========================================

(*) Merge master branch (94f15d0) on to closure branch (bdb5e6b)

From 7c44eb3 (closure):
======================

(*) Add prisim/closure.py to repo to analyze closure phase data

From f3c3107 (phasing):
======================

In prisim/interferometry.py,

(*) In member function duplicate_measurements() of class
InterferometerArray, duplicate attribute projected_baselines to the
required shape

From 7c44eb3 (master):
=====================

In scripts/run_prisim.py,

(*) Rotate visibilities to the phase reference before duplicating the
redundant visibilities and saving in UVFITS format. 

From d158bd9 (cp-fixes):
=======================

In prisim/delay_spectrum.py,
